refactor: fix warns and improve code